test/symtabTest/pass/test9.ic
class Parent {
	int x;
}

class FirstChild extends Parent {
	string s;
}

class SecondChild extends Parent {
	string s;
}