test/symtabTest/fail/test2.ic
class MultFieldDecls {
	int x;
	int x;
}